update index.html  密碼

--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+
+
+    
+   <script LANGUAGE="JavaScript">
+             //密碼設定 
+        var password = ''
+        password=prompt('輸入密碼:','');
+       if (password != null) {
+        location.href= password + ".html";
+        }
+       
+        </script>
  <script>
    // Initialize Firebase
    // TODO: Replace with your project's customized code snippet
