update index.html updat4

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <script LANGUAGE="javascript">
         var password = ''
         password = prompt("請輸入密碼","")
-        if (password != null) {
+        if (password=password) {
          alert('歡迎光臨');
          location.href= password + ".html";
         }
