--- a/index.html
+++ b/index.html
@@ -106,26 +106,23 @@
 
     
     <script LANGUAGE="javascript">
-        var password = ''
-        password = prompt("請輸入密碼","")
+    var password=''
+      password = prompt("請輸入密碼:",'');
         if (password=password) {
          alert('歡迎光臨');
          location.href= password + ".html";
         }
-        else
-        {
-        if (password=="null")
+        else if (password=="null")
         {
         alert('請再輸入一次密碼');
        location.href='https://cc5986224.github.io/aaphelper/.html';
         }
-        else
-        if (password!=password)
+        else if (password!=password)
         {
         alert('請再輸入一次密碼');
        location.href='https://cc5986224.github.io/aaphelper/.html';
         }
-        } 
+
         </script>
 
 
