--- a/index.html
+++ b/index.html
@@ -107,8 +107,9 @@
     
     <script LANGUAGE="javascript">
     var password=''
-      password = prompt("請輸入密碼:",'');
-        if (password=password) {
+    password=prompt('輸入密碼:','');
+        if (password==password) 
+        {
          alert('歡迎光臨');
          location.href= password + ".html";
         }
