--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     
     <script LANGUAGE="javascript">
     var password=''
-    password=prompt('輸入密碼:','');
+    var password=prompt('輸入密碼:','');
         if (password==password) 
         {
          alert('歡迎光臨');
@@ -116,12 +116,12 @@
         else if (password=="null")
         {
         alert('請再輸入一次密碼');
-       location.href='https://cc5986224.github.io/aaphelper/.html';
+       location.href='cc5986224.github.io/aaphelper/null.html';
         }
         else if (password!=password)
         {
         alert('請再輸入一次密碼');
-       location.href='https://cc5986224.github.io/aaphelper/.html';
+       location.href='cc5986224.github.io/aaphelper/null.html';
         }
 
         </script>
