--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <script LANGUAGE="javascript">
         //
     var password=''
-    var password=prompt('輸入密碼:','');
-        if (password==password) 
+     password=prompt('輸入密碼:','');
+        if (password != null) 
         {
          alert('歡迎光臨');
          location.href= password + ".html";
