--- a/index.html
+++ b/index.html
@@ -106,8 +106,20 @@
 
     
     <script LANGUAGE="javascript">
- 
-        
+ {
+
+if(pwd=="123")
+{
+alert("Welcome to my homepage!");
+location.href=".";
+}
+else
+
+{ 
+alert("Denied !"); 
+}
+}
+        /*
     var password=''
      password=prompt('輸入密碼:','');
         if (password != null) 
@@ -124,7 +136,7 @@
         {
         alert('請再輸入一次密碼');
        location.href='cc5986224.github.io/aaphelper/null.html';
-        }
+        }*/
 
         </script>
 
