--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
            if (password=="123")
             {
             alert('Welcome!')
-            location.href='cc5986224.github.io/aaphelper/index.html'
+            location.href='index.html'
             }
             else
             {
