--- a/index.html
+++ b/index.html
@@ -104,27 +104,12 @@
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
 
     <script LANGUAGE="javascript">
+var password = ''
+password=prompt('輸入密碼:','');
+if (password != null) {
+location.href= password + ".html";
+}
 
-            var password = prompt("請輸入密碼","")
-           if (password=="123")
-            {
-            alert('Welcome!')
-            location.href='.'
-            }
-            else
-            {
-            if (password=="null")
-            {
-            alert('請再輸入一次密碼');
-           location.href='cc5986224.github.io/aaphelper';
-            }
-            else
-            if (password!="123")
-            {
-            alert('請再輸入一次密碼');
-           location.href='cc5986224.github.io/aaphelper';
-            }
-            } 
             </script> 
 
  <script>
