--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 var password = ''
 password=prompt('輸入密碼:','');
 if (password != null) {
+    alert('Welcome!')
 location.href= password + ".html";
 }
 
